--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,15 @@ body {
 a {
   color: #00B7FF;
 }
+
+.container {
+  border: transparent;
+}
+
+.cell {
+  border: solid 2px red;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  padding: 0px;
+}
