--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ a {
 }
 
 .cell {
-  border: solid 2px red;
+  border: solid 2px transparent;
   display: inline-block;
   width: 50px;
   height: 50px;
