--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,13 +24,13 @@ a {
 }
 
 .b-b {
-  border-bottom-color: black;
+  border-top-color: black;
 }
 
 .b-r {
-  border-bottom-color: black;
+  border-right-color: black;
 }
 
 .b-l {
-  border-bottom-color: black;
+  border-left-color: black;
 }
