--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,12 +10,15 @@ a {
 .container {
   border: transparent;
 }
-
+.row {
+  box-sizing: border-box;
+}
 .cell {
   border: solid 2px transparent;
   display: inline-block;
   width: 50px;
   height: 50px;
+  box-sizing: border-box;
   padding: 0px;
 }
 
