--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,9 @@ a {
   width: 50px;
   height: 50px;
   box-sizing: border-box;
-  padding: 0px;
+  text-align: center;
+  padding: 7px;
+  font-size: 25px;
 }
 
 .b-t {
@@ -36,4 +38,9 @@ a {
 
 .b-l {
   border-left-color: black;
+}
+
+.player {
+  /* content: "&#128113;"; */
+  background-color: yellow; 
 }
