--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,18 +9,23 @@ a {
 
 .container {
   border: transparent;
+  position: relative;
 }
+
 .row {
   box-sizing: border-box;
+  position: relative;
 }
+
 .cell {
+  position: relative;
   border: solid 2px transparent;
   display: inline-block;
   width: 50px;
   height: 50px;
   box-sizing: border-box;
   text-align: center;
-  padding: 7px;
+  /* padding: 7px; */
   font-size: 25px;
 }
 
@@ -40,7 +45,11 @@ a {
   border-left-color: black;
 }
 
+.player:before {
+  content: "👱";
+}
+
 .player {
-  /* content: "&#128113;"; */
-  background-color: yellow; 
+  position: absolute;
+  border: solid 2px transparent;
 }
