--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,23 +62,21 @@ select {
 
 .row {
   box-sizing: border-box;
-  /* position: relative; */
 }
 
 .cell {
-  /* position: relative; */
-  border: solid 2px transparent;
+  /* background-image: url(https://www.chubmagazine.com/wp-content/uploads/2017/10/Greengrass.jpg); */
+  border: solid 0.1px transparent;
   display: inline-block;
   width: 50px;
   height: 50px;
   box-sizing: border-box;
   text-align: center;
-  /* padding: 7px; */
-  /* font-size: 25px; */
+ 
 }
 
 .b-t {
-  border-top-color: black;
+  border-top-color:  black;
 }
 
 .b-b {
@@ -98,6 +96,16 @@ select {
 }
 
 .player {
+  position: absolute;
+  border: solid 2px transparent;
+  font-size: 30px;
+}
+
+.castle:before {
+  content: "🏰";
+}
+
+.castle {
   position: absolute;
   border: solid 2px transparent;
   font-size: 30px;
