--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
+html {
+  background-image: url(https://www.bmocm.com/about-us/images/location-map.gif);
+}
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 a {
@@ -13,9 +17,10 @@ a {
 
 .container {
   border: transparent;
-  position: relative;
   display: table;
   border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .dropDownContainer {
@@ -64,7 +69,6 @@ select {
 
 div.showLevel {
   margin: 0.5em 0em 0.5em 0em;
-  text-align: left;
 }
 
 .noteMazeShow {
@@ -126,4 +130,29 @@ div.showLevel {
   position: absolute;
   border: solid 2px transparent;
   font-size: 30px;
+}
+
+#modal-message {
+  visibility: hidden;
+  color: white;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.30);
+  z-index: 1;
+}
+
+#message {
+  width: 300px;
+  height: 300px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-left: -150px;
+  margin-top: -150px;
 }
