updates at readme

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 html {
-  background: url(https://www.bmocm.com/about-us/images/location-map.gif);
+  background: url(https://ak4.picdn.net/shutterstock/videos/16716424/thumb/1.jpg);
+  background-size: cover;
 }
 body {
   padding: 50px;
